<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>

        <variable
            name="viewModel"
            type="com.framgia.fbook.screen.updatebook.UpdateBookActivity"
            />
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.framgia.fbook.screen.updatebook.UpdateBookActivity"
        >

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/button_create_form"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_10"
                >
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_2"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_2"
                        android:background="@drawable/border_background_2"
                        android:orientation="vertical"
                        android:padding="@dimen/dp_5"
                        >
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/text_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_5"
                            android:layout_marginStart="@dimen/dp_5"
                            >
                            <AutoCompleteTextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/title"
                                android:paddingEnd="@dimen/dp_30"
                                android:paddingRight="@dimen/dp_30"
                                android:text="@={viewModel.mBook.title}"
                                tools:ignore="RtlSymmetry"
                                />

                        </android.support.design.widget.TextInputLayout>
                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_5"
                            android:layout_marginStart="@dimen/dp_5"
                            android:layout_marginTop="@dimen/dp_5"
                            >
                            <TextView
                                android:id="@+id/text_text_search_with"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/search_with"
                                android:textColor="@color/color_blue"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                />
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="@dimen/dp_10"
                                android:layout_marginStart="@dimen/dp_10"
                                android:orientation="horizontal"
                                android:weightSum="2.3"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toRightOf="@+id/text_text_search_with"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                >
                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1"
                                    android:background="@drawable/button_click_red"
                                    android:gravity="center"
                                    android:onClick="@{() -> viewModel.onClickImportFromInternalBook()}"
                                    android:text="@string/internal_book"
                                    android:textAllCaps="false"
                                    android:textColor="@color/color_white"
                                    app:layout_constraintLeft_toRightOf="@+id/text_text_search_with"
                                    />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="@dimen/dp_1"
                                    android:gravity="center"
                                    android:text="@string/or"
                                    android:textColor="@color/color_dark_gray"
                                    android:textStyle="bold"
                                    />
                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginLeft="@dimen/dp_5"
                                    android:layout_marginStart="@dimen/dp_5"
                                    android:layout_weight="1"
                                    android:background="@drawable/button_click_red"
                                    android:gravity="center"
                                    android:onClick="@{() -> viewModel.onClickImportFromGoogleBook()}"
                                    android:text="@string/google_book"
                                    android:textAllCaps="false"
                                    android:textColor="@color/color_white"
                                    app:layout_constraintLeft_toRightOf="@+id/text_text_search_with"
                                    />
                            </LinearLayout>
                        </android.support.constraint.ConstraintLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:padding="@dimen/dp_2"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_2"
                        android:background="@drawable/border_background_2"
                        android:orientation="vertical"
                        android:padding="@dimen/dp_5"
                        >
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/text_author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            bind:errorText="@{viewModel.authorError}"
                            >
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/author"
                                android:text="@={viewModel.mBook.author}"
                                />
                        </android.support.design.widget.TextInputLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:baselineAligned="false"
                            android:orientation="horizontal"
                            >
                            <FrameLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                >
                                <android.support.design.widget.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    >
                                    <EditText
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:editable="false"
                                        android:focusable="false"
                                        android:hint="@string/category"
                                        android:inputType="text"
                                        android:maxLines="1"
                                        android:paddingEnd="@dimen/dp_20"
                                        android:paddingRight="@dimen/dp_20"
                                        tools:ignore="RtlSymmetry"
                                        />
                                </android.support.design.widget.TextInputLayout>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center|end"
                                    android:tint="@color/color_black"
                                    app:srcCompat="@drawable/ic_arrow_drop_down"
                                    />
                            </FrameLayout>
                            <FrameLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                >
                                <android.support.design.widget.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    >
                                    <EditText
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:focusable="false"
                                        android:hint="@string/office"
                                        android:inputType="text"
                                        android:maxLines="1"
                                        android:paddingEnd="@dimen/dp_20"
                                        android:paddingRight="@dimen/dp_20"
                                        tools:ignore="RtlSymmetry"
                                        />
                                </android.support.design.widget.TextInputLayout>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center|end"
                                    android:tint="@color/color_black"
                                    app:srcCompat="@drawable/ic_arrow_drop_down"
                                    />
                            </FrameLayout>
                        </LinearLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            >
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:focusable="false"
                                android:hint="@string/publish_date"
                                android:onClick="@{() -> viewModel.onPickDatePublish()}"
                                android:text="@={viewModel.mPublishDate}"
                                />
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            bind:errorText="@{viewModel.descriptionError}"
                            >
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/description"
                                android:text="@={viewModel.mBook.description}"
                                />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
        <Button
            android:id="@+id/button_create_form"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:onClick="@{() -> viewModel.onClickSendRequest()}"
            android:text="@string/send_request"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </android.support.constraint.ConstraintLayout>
</layout>
